# GustOS

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  rust-toolchain.toml
.devcontainer/: devcontainer.json
bootblock/: A20.asm  begin_pm.asm  boot.asm  boot0.asm  boot1.asm  boot2.asm  boot3.asm  bootasm.S  disk.asm  disk_load.asm  gdt.asm  gdt_32.asm  kernel.asm  load_kernel.asm  print_registers_rm.asm  print_rm.asm  print_string.asm  print_string_pm.asm  print_string_rm.asm  switch_to_pm.asm
bootblock/gdt/: gdt_32.asm  gdt_64.asm
bootblock/protectedmode/cpuid/: check_cpuid.asm
bootblock/protectedmode/print/: print_string.asm
bootblock/realmode/a20/: check_a20.asm  enable_a20.asm
bootblock/realmode/disk/: boot_1_load.asm  kernel_load.asm  lba_to_chs.asm  reset.asm
bootblock/realmode/memory/: query_lower_memory.asm  query_upper_memory.asm
bootblock/realmode/print/: hex.asm  registers.asm  string.asm
scripts/docker/: Dockerfile
