[package]
name = "gust_os"
version = "0.1.0"
edition = "2021"

[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "compiler_builtins"]

[build]
target = "x86-gust_os.json"

[lib]
name = "gusto_os"
path = "src/main.rs"
edition = "2021"
crate-type = ["staticlib"]

[dependencies]